--- a/fundamental algebra and analysis/封装模板.tex
+++ b/fundamental algebra and analysis/封装模板.tex
@@ -3,6 +3,7 @@
 \usepackage{newtxtext, geometry, amsmath, amssymb}
 \usepackage{amsthm} % 设置定理环境，要在amsmath后用
 \usepackage{bbm}
+\usepackage{interval}
 \usepackage{xpatch} % 用于去除amsthm定义的编号后面的点
 \usepackage[strict]{changepage} % 提供一个 adjustwidth 环境
 \usepackage{multicol} % 用于分栏
