make-up session

--- a/fundamental algebra and analysis/prerequisites for fundamental algebra and analysis.tex
+++ b/fundamental algebra and analysis/prerequisites for fundamental algebra and analysis.tex
@@ -1083,7 +1083,7 @@ By (1) of Remark \ref{remark3.7.2} $h$ is surjective.
     Let $X$ anf $Y$ be sets, $h$ be a correspondence from $X$ to $Y$ ,and $A$ be a subset of $X$.Denote by $h|_A$ the correspondence from $A$ to $Y$ such that$$\Gamma_{h|_A}=\Gamma_h\bigcap (A\times Y)$$ We call it the \textbf{restriction of $h$ to $A$}
 \end{definitionenv}
 \chapter{Binary Relations }
-$\dagger$This chapter was written in pre-course at first,then added some sections in make-up courses,which titled "Ordering".Some notations haven't been changed yet and some sections have the same knowledge.It's a bit mess.
+$\dagger$This chapter was written in pre-course at first,then added some sections in make-up session,which titled "Ordering".Some notations haven't been changed yet and some sections have the same knowledge.It's a bit mess.
 \section{Generalities}
 \begin{definitionenv}
     Let $X$ be a set ,we call \textbf{binary relation} on $X$ any correspondence from $X$ to $X$ .If $R$ is a binary relation on $X$ ,for any $(x,y)\in X\times X $ we denote by $x R y $ the statement $(x,y)\in \Gamma_R$
